[workspace]

members = [
    "main",
    "common",
    "two_sum",
    "three_sum",
    "add_two_numbers",
    "alien_dictionary",
    "analyze_user_website_visit_pattern",
    "android_unlock_patterns",
    "backspace_string_compare",
    "best_time_to_buy_and_sell_stock",
    "binary_tree_maximum_path_sum",
    "binary_tree_vertical_order_traversal",
    "buildings_with_an_ocean_view",
    "bulls_and_cows",
    "candy_crush",
    "coin_change",
    "container_with_most_water",
    "count_complete_tree_nodes",
    "count_of_smaller_numbers_after_self",
    "course_schedule2",
    "cracking_the_safe",
    "decode_string",
    "design_hit_counter",
    "design_search_autocomplete_system",
    "diameter_of_binary_tree",
    "employee_free_time",
    "encode_and_decode_strings",
]
